# FootReconstructioniOS

./: README.md
iFoot3D/Reconstruction/: CMakeLists.txt  main.cpp  readme.md
iFoot3D/Reconstruction/libs/: tbb_static.lib
iFoot3D/Reconstruction/pipeline/: CMakeLists.txt  alignment.cpp  alignment.h  floor.cpp  floor.h  io.cpp  io.h  logger.cpp  logger.h  postprocessing.cpp  postprocessing.h  reconstruction.cpp  reconstruction.h  sandbox.cpp  sandbox.h  segmentation.cpp  segmentation.h  stitching.cpp  stitching.h  util.cpp  util.h
iFoot3D/iFoot3D.xcodeproj/: project.pbxproj
iFoot3D/iFoot3D/Application/: AppContainer.swift  AppCoordinator.swift  AppDelegate.swift  SceneDelegate.swift
iFoot3D/iFoot3D/BusinessLogic/Bridging/: iFoot3D-Bridging-Header.h
iFoot3D/iFoot3D/Core/Constants/: CaptureConstants.swift  OutputConstants.swift  ProcessingConstants.swift
iFoot3D/iFoot3D/CoreUI/Base/: BaseView.swift  BaseViewController.swift  BaseViewModel.swift  Module.swift
iFoot3D/iFoot3D/CoreUI/Nodes/: FootNode.swift  PhoneNode.swift
iFoot3D/iFoot3D/Environment/: Info.plist
iFoot3D/iFoot3D/Presentation/CaptureScene/: CaptureModuleBuilder.swift  CaptureView.swift  CaptureViewController.swift  CaptureViewModel.swift
iFoot3D/iFoot3D/Presentation/FailureScene/: FailureModuleBuilder.swift  FailureView.swift  FailureViewController.swift  FailureViewModel.swift
iFoot3D/iFoot3D/Presentation/FootCaptureScene/: FootCaptureModuleBuilder.swift  FootCaptureView.swift  FootCaptureViewController.swift  FootCaptureViewModel.swift
iFoot3D/iFoot3D/Resources/Colors/: Colors.swift
(+111 files in other folders)
